--- a/common/src/main/resources/config.properties
+++ b/common/src/main/resources/config.properties
@@ -1,3 +1,3 @@
 api.url=https://sandbox-api.baelab.net/api
-xray.url=https://xray.cloud.xpand-it.com/api/v1
-jira.url=https://for-automation-poc.atlassian.net/rest/api/2
+xray.url=https://xray.cloud.getxray.app/api/v2
+jira.url=https://bankpoc.atlassian.net/rest/api/2
