--- a/tests/pom.xml
+++ b/tests/pom.xml
@@ -43,6 +43,11 @@
             <version>1.0-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>org.picocontainer</groupId>
+            <artifactId>picocontainer</artifactId>
+            <version>2.15</version>
+        </dependency>
     </dependencies>
 
 </project>
